--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "console-4-console",
+  "name": "dashboard-4-deployments",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,8 +7,13 @@
     "build": "next build",
     "start": "next start"
   },
+  "engines": {
+    "node": "^14.0.0"
+  },
   "dependencies": {
+    "memoizee": "^0.4.15",
     "next": "10.1.3",
+    "node-fetch": "^2.6.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   }
