--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "memoizee": "^0.4.15",
     "next": "10.1.3",
     "node-fetch": "^2.6.1",
+    "octokit": "^1.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   }
