--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "node": "^14.0.0"
   },
   "dependencies": {
+    "luxon": "^1.26.0",
     "memoizee": "^0.4.15",
     "next": "10.1.3",
     "node-fetch": "^2.6.1",
     "octokit": "^1.0.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^0.5.5"
   }
 }
